# projects

./: .gitignore  DEPLOYMENT.md  Dockerfile  Main.py  README.md  bar_charts.py  data_cleaner.py  docker-compose.yml  heatmap_charts.py  line_charts.py  map_charts.py  pie_charts.py  pyproject.toml  render.yaml  requirements.txt  requirements_streamlit.txt  scatter_charts.py  smuggling_detector.py  streamlit_app.py  styles.css
assets/: styles.css
