[build-system]
requires = ["setuptools>=68.0", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["find:"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.css", "*.csv", "*.pkl"]

[project]
name = "maritime-dashboard"
version = "1.0.0"
description = "Maritime security dashboard for analyzing maritime events and smuggling detection"
authors = [
    {name = "Maritime Project Team"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dash>=3.0.4",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "streamlit>=1.28.0",
    "numpy>=1.27.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
